src/objects/Partner_Lead_Status_History__c.object
<CustomObject>
    <fields>
        <fullName>New_Partner_Lead_Status_del__c</fullName>
        <label>New Partner Lead Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Partner_Lead_Status__c</fullName>
        <label>Old Partner Lead Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Partner__c</fullName>
        <label>Related Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Lead Status History</relationshipLabel>
        <relationshipName>Partner_Lead_Status_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Partner Lead Status History</label>
    <nameField>
        <displayFormat>PLS - {0000}</displayFormat>
        <label>Partner Lead Status History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Lead Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>